--- a/gh-pages/Gemfile
+++ b/gh-pages/Gemfile
@@ -2,7 +2,7 @@
 
 source "https://rubygems.org"
 
-git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
+git_source(:github) {|rakhleev/itwars| "https://github.com/#{repo_name}" }
 
 # gem "rails"
 gem "github-pages", group: :jekyll_plugins
