--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: itwars.me
+title: supprt.science
 email:
 description:
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://itwars.me" # the base hostname & protocol for your site
-copyright: <p class="copy-left">&copy;</p> 2019 <a href="https://itwars.me/">itwars.me</a>
+copyright: <p class="copy-left">&copy;</p> 2020 <a href="https://itwars.me/">itwars.me</a>
 permalink: /:categories/:title/
 permalink: pretty
 github: [metadata]
